sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:7: error: reassignment to val
                                               if(blol<amin){a=b}}
                                                              ^AlgSelectionSort:8: error: not found: value b
                         echange(a,b)}
                                   ^