sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  val lgr=getNombreValeurs()
  for (pivot<-0 to lgr-2){val a=pivot
                         val amin=getValeur(a)
                         for(b<-pivot to lgr-2){var blol=getValeur(b)
                                               if(blol<amin){a=b}}
                         echange(a,b)}
}